# framenet-video-utils

./: README.md  pyproject.toml
src/framenet_video_utils/: __init__.py  core.py
