# pyproject.toml

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "framenet-video-utils"
version = "1.0.0"
authors = [
    { name="FrameNet.ai Team", email="dev@framenet.ai" },
]
description = "A simple utility to get details like duration, resolution, and FPS from a video file."
readme = "README.md"
requires-python = ">=3.7"
license = { file="LICENSE" }
keywords = ["video", "utils", "ffmpeg", "moviepy", "framenet", "video editing"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Multimedia :: Video",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

# This is the critical part for our backlink and package dependencies.
dependencies = [
    "moviepy",
]

[project.urls]
Homepage = "https://www.framenet.ai"
Documentation = "https://github.com/framenet-ai/framenet-video-utils"
Repository = "https://github.com/framenet-ai/framenet-video-utils"
"Bug Tracker" = "https://github.com/framenet-ai/framenet-video-utils/issues"
